# regulus-npu-demo-qbruntime

./: .gitignore  README.md
1-usb-camera-3-models-hdmi-out/: Makefile  README.md  check.usbcamera.sh  demo.cc
1-usb-camera-3-models-hdmi-out/regulus-camera-demo-src/: .clang-format  README.md  app_image.cc  app_image.h  app_maccel.cc  app_maccel.h  app_module_capture.cc  app_module_capture.h  app_module_capture_and_preprocess.cc  app_module_capture_and_preprocess.h  app_module_display.cc  app_module_display.h  app_module_draw_image.cc  app_module_draw_image.h  app_module_infer.cc  app_module_infer.h  app_module_post_process.cc  app_module_post_process.h  app_module_preprocess.cc  app_module_preprocess.h  app_module_transfer.cc  app_module_transfer.h  app_parse_argv.cc  app_parse_argv.h  app_type.h  benchmarker.cc  (+16 more)
face-detection-yolov8n/: .gitignore  Makefile  README.md  config.yaml  demo
image-classification-resnet50/: Makefile  README.md  resnet50  resnet50.cc  resnet50.py  stb_image.h  stb_image_resize.h
vision/: README.md
vision/image-classification/src/: CMakeLists.txt
vision/image-classification/src/postprocess/: cls_post.cc  cls_post.h  commons.h  post_builder.h  postprocess.h
vision/image-classification/src/preprocess/: preprocess.cc
vision/object-detection/: CMakeLists.txt  README.md  compile.sh  inference  inference.cc
vision/object-detection/src/postprocess/: postprocess.h  ssd_post.cc  ssd_post.h  yolo_anchor_post.cc  yolo_anchor_post.h  yolo_anchorless_post.cc  yolo_anchorless_post.h
vision/object-detection/src/preprocess/: preprocess.cc
(+67 files in other folders)
